--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
 </head>
 <body>
 
+    <h1>TO-DO</h1>
+    <form>
+        <label for="item">ENTER A TASK</label>
+        <input type="text" id="item" placeholder="Enter a task">
+
+        <button type="submit">Add</button>
+
+        <ul class="list-todo">
+
+
+        </ul>
+
+    </form>
+
+
     <script src="app.js"></script>
 </body>
 </html>
