logique js + finitions

--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TO-DO</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <h1>TO-DO</h1>
     <form>
-        <label for="item">ENTER A TASK</label>
-        <input type="text" id="item" placeholder="Enter a task">
+        <label for="item"> Just do it ! </label>
+        <input type="text" id="item" placeholder="Task ...">
 
-        <button type="submit">Add</button>
+        <button type="submit">+</button>
 
         <ul class="list-todo">
 
